examples/manual/proguide/errors/result.bas
'' examples/manual/proguide/errors/result.bas
''
'' Example extracted from the FreeBASIC Manual
'' from topic 'Error Handling'
''
'' See Also: https://www.freebasic.net/wiki/wikka.php?wakka=ProPgErrorHandling
'' --------

Print Open ("xzxwz.zwz" For Input As #1)
Sleep
	
